RESOLVED FIXED139882
Fix some typos in a comment.
https://bugs.webkit.org/show_bug.cgi?id=139882
Summary Fix some typos in a comment.
Mark Lam
Reported 2014-12-22 16:26:54 PST
Cosmetic change only.
Attachments
the patch (1.78 KB, patch)
2014-12-22 16:29 PST, Mark Lam
msaboff: review+
Mark Lam
Comment 1 2014-12-22 16:29:45 PST
Created attachment 243646 [details] the patch
Michael Saboff
Comment 2 2014-12-22 16:31:36 PST
Comment on attachment 243646 [details] the patch rs=me
WebKit Commit Bot
Comment 3 2014-12-22 16:32:00 PST
Attachment 243646 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/jit/JITPropertyAccess.cpp:105: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] ERROR: Source/JavaScriptCore/jit/JITPropertyAccess.cpp:106: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 4 2014-12-22 16:46:38 PST
Comment on attachment 243646 [details] the patch Cancelling commit. Will land manually.
Mark Lam
Comment 5 2014-12-22 16:50:55 PST
Note You need to log in before you can comment on or make changes to this bug.