Fix some typos in a comment. <https://webkit.org/b/139882>

Reviewed by Michael Saboff.

* jit/JITPropertyAccess.cpp:
(JSC::JIT::emit_op_get_by_val):



Canonical link: https://commits.webkit.org/157826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177667 268f45cc-cd09-0410-ab3c-d52691b4dbfc